# Makeathon-15-May-2026-GP---NR2Dashboard

./: .gitignore  ARCHITECTURE.md  BRIEF.md  LICENSE  README.md  requirements.txt
app/: __init__.py  database.py  llm.py  main.py  models.py  prompts.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: conversation.py  db.py  logger.py  main.py  middleware.py  models.py  settings.py
backend/app/llm/: anthropic_client.py
backend/app/prompts/: smartrep_editorial.txt  smartrep_voicebot.txt
backend/app/routes/: editorial.py  query.py
backend/app/services/: chart_pipeline.py
backend/app/sql/: validator.py
backend/app/voice/: client.py  handler.py  prompts.py  session.py  tools.py
data/: README.md
devdocs/: DATA_OUTLINE.md  MAKEATHON_2026_SMARTREP_BLUEPRINT.md
docs/: API.md  ARCHITECTURE.md  CHART_TYPES.md  DATA.md  EVALUATION.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: suggestion-pills.tsx
frontend/components/canvas/: ChartRenderer.tsx  DraggableCanvas.tsx  WidgetTile.tsx  ZoomControls.tsx
frontend/components/charts/: AreaChart.tsx  BarChart.tsx  BoxPlot.tsx  ComboChart.tsx  DataTable.tsx  FunnelChart.tsx  GaugeChart.tsx  Heatmap.tsx  Histogram.tsx  HorizontalBarChart.tsx  KPICard.tsx  LineChart.tsx  (+5 more)
frontend/lib/: api-client.ts  api-types.ts  auth.ts  download.ts  env.ts  format.ts  logger.ts  pdf-export.ts
python-sample/: README.md  main.py  pyproject.toml
starter/: README.md  demo.py  requirements.txt
static/: app.js  index.html  styles.css
(+17 files in other folders)
