[project]
name = "aperture-backend"
version = "0.1.0"
description = "Aperture NL-to-dashboard backend"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "duckdb>=1.1.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",
  "anthropic>=0.79.0,<1.0.0",
  "sqlglot>=25.0.0",
  "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
